--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -49,8 +49,7 @@
 
 .home {
   position: relative; /* Ensure the div can contain absolutely positioned elements */
-  height: 70vh;
-  min-height: 20vh;
+  height: auto;
   overflow: hidden; /* Hide overflow to prevent image overflow */
 }
 
@@ -73,8 +72,7 @@
 @media screen and (max-width:700px) {
   .home {
     position: relative; /* Ensure the div can contain absolutely positioned elements */
-    height: 40vh;
-    min-height: 20vh;
+    height: auto;
     overflow: hidden; /* Hide overflow to prevent image overflow */
   }
   
