--- a/src/styles/International.module.css
+++ b/src/styles/International.module.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'BostonAngelRegular';
+  src: url('../../public/font/Boston\ Angel\ Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'MarchClean';
+  src: url('../../public/font/March\ Clean.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.boston{
+  font-family: 'BostonAngelRegular', sans-serif;
+}
+.march{
+  font-family: 'MarchClean', sans-serif;
+}
 
 @media screen and (min-width:730px) {
     .banner{
