--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,3 +1,25 @@
+@font-face {
+  font-family: 'BostonAngelRegular';
+  src: url('../../public/font/Boston\ Angel\ Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'MarchClean';
+  src: url('../../public/font/March\ Clean.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.boston{
+  font-family: 'BostonAngelRegular', sans-serif;
+}
+.march{
+  font-family: 'MarchClean', sans-serif;
+}
+
 .card-container {
   width: 100%;
   max-width: 300px; /* Set a maximum width for the card */
@@ -27,13 +49,6 @@
   font-weight: 100;
 }
 
-.light {
-  font-weight: 600 !important;
-  word-wrap: break-word;
-  height: auto;
-  margin-bottom: 0% !important;
-  font-size: 15px;
-}
 @media screen and (min-width:700px) {
   .save {
     font-size: 7px;
