--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -49,6 +49,7 @@
 
 .home {
   position: relative; /* Ensure the div can contain absolutely positioned elements */
+  height: auto;
   overflow: hidden; /* Hide overflow to prevent image overflow */
 }
 
@@ -71,6 +72,7 @@
 @media screen and (max-width:700px) {
   .home {
     position: relative; /* Ensure the div can contain absolutely positioned elements */
+    height: auto;
     overflow: hidden; /* Hide overflow to prevent image overflow */
   }
   
