itineraries , logo and international and domestic section along with price converter

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'MarchClean';
-  src: url('../../public/font/March\ Clean.ttf') format('truetype');
+  src: url('../../font/March Clean.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
