--- a/src/styles/International.module.css
+++ b/src/styles/International.module.css
@@ -1,3 +1,14 @@
+
+.cardContainer {
+  /* Adjust these styles as per your design requirements */
+  background-color: #fff;
+  border: 1px solid #fff;
+  width: 90%;
+  margin-bottom: 1rem;
+  height: 50vh;
+}
+
+
 @font-face {
   font-family: 'BostonAngelRegular';
   src: url('../../public/font/Boston\ Angel\ Regular.ttf') format('truetype');
@@ -53,15 +64,6 @@
 }
 
 
-.cardContainer {
-    /* Adjust these styles as per your design requirements */
-    background-color: #fff;
-    border: 1px solid #fff;
-    width: 90% !important;
-    margin-bottom: 1rem;
-    height: 50vh;
-  }
-  
   .imageContainer {
     width: 100%;
     height: 50vh;
