--- a/src/Itinerary/styles/right.module.css
+++ b/src/Itinerary/styles/right.module.css
@@ -8,9 +8,9 @@
 }
 
 .right1 {
-  font-size: 13px;
+  font-size: 16px;
   line-height: 25.5px;
-  background-color: rgb(255, 255, 255);
+  background-color: #F9F9FA;
   margin-top: 30px;
   display: block;
   box-shadow: rgba(0, 0, 0, 0.08) -4px -5px 14px 0px,
@@ -25,22 +25,20 @@
   display: flex;
   gap: 2rem;
   margin: 1rem 0;
-  color: #818090;
+  color: #B3A8AB;
 
 }
 .tour_details_right_box_heading {
-  font-size: 20px;
+  font-size: 25px;
   line-height: 28.8px;
-  font-weight: 500;
-
-  border-bottom: 0.916031px solid #fb923c;
+  font-weight:700;
+  border-bottom: 0.916031px solid #F68C1F;
   margin-bottom: 20px;
   padding-bottom: 10px;
   width: fit-content;
 }
 .valid_date_area_one > h5 {
-  color: #818090;
-
+  color: #B3A8AB;
 }
 
 .valid_date_area_one {
@@ -48,17 +46,16 @@
   flex-direction: column;
 }
 .tour_package_details_bar_list >h5{
-  color: #818090;
+  color: #B3A8AB;
   
 }
 
 .tour_package_details_bar_list > ul > li {
-
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 600;
   list-style-type: none;
   display: flex;
-  color: #818090;
+  color: #B3A8AB;
   gap:.6rem;
   margin-top: .7rem;
 }
@@ -67,7 +64,7 @@
   width: 4% !important;
 }
 .tour_package_details_bar_price {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 25.5px;
   height: fit-content;
   list-style-type: disc;
@@ -77,7 +74,7 @@
 .tour_package_bar_price {
   display: flex;
   gap: 0.5rem;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 25.5px;
   height: 41.3931px;
   padding-top: 15px;
@@ -91,7 +88,7 @@
 }
 .tour_package_bar_price > h3 {
   text-decoration: none;
-  color: #fb923c;
+  color: #F68C1F;
   padding-left: 10px;
 }
 
@@ -106,16 +103,16 @@
   }
   .tour_package_details_bar_price>h5{
     font-size: 25px;
-    border-bottom: 0.916031px solid #fb923c !important;
+    border-bottom: 0.916031px solid #F68C1F !important;
     width: fit-content;
-    font-weight: 500;
+    font-weight: 600;
   }
   .tour_package_details_bar_list > ul > li {
     font-size: 15px;
-    font-weight: 400;
+    font-weight: 600;
     list-style-type: none;
     display: flex;
-    color: #818090;
+    color: #B3A8AB;
     gap:.6rem;
     margin-top: .7rem;
     
