--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,6 +7,23 @@
   }
 }
 
+.navbar-fixed{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000; 
+}
+/* In your Home.css or a relevant CSS file */
+.navbar-sticky {
+  position: -webkit-sticky; /* For Safari */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1000; /* Adjust the z-index as needed */
+  background-color: white; /* Ensure the background is set */
+}
+
+
 .infinite-scroll-container {
   display: flex;
   overflow-x: hidden;
@@ -72,7 +89,7 @@
 @media screen and (max-width:700px) {
   .home {
     position: relative; /* Ensure the div can contain absolutely positioned elements */
-    height: 50vh;
+    height: 92vh;
     overflow: hidden; /* Hide overflow to prevent image overflow */
   }
   
