--- a/src/styles/International.module.css
+++ b/src/styles/International.module.css
@@ -1,81 +1,66 @@
 
-.cardContainer {
-  /* Adjust these styles as per your design requirements */
-  background-color: #fff;
-  border: 1px solid #fff;
-  width: 90%;
-  margin-bottom: 1rem;
-  height: 50vh;
-}
-
-
-@font-face {
-  font-family: 'BostonAngelRegular';
-  src: url('../../public/font/Boston\ Angel\ Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-
-@font-face {
-  font-family: 'MarchClean';
-  src: url('../../public/font/March\ Clean.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-.boston{
-  font-family: 'BostonAngelRegular', sans-serif;
-}
-.march{
-  font-family: 'MarchClean', sans-serif;
-}
-
-@media screen and (min-width:730px) {
-    .banner{
-        background-image: url('../assets/banner.webp');
-        height: 60vh;
-        background-size: cover;
-        
-    }
-    .img{
-        height:60vh;
-        background-size: cover;
-    }
-    
-}
-
-
-
-
-@media screen and (max-width:730px) {
-    .banner{
-        background-image: url('../assets/banner.webp');
-        background-size: cover;
-        height: 60vh;
-        
-    }
-    .img{
-        width: 100%;
-        height: 30vh;
-        object-fit: cover;
-    }
-    
-}
-
+@media screen and (min-width: 730px) {
+  .banner {
+    background-image: url("../assets/banner.webp");
+    height: 60vh;
+    background-size: cover;
+  }
+  .cardContainer {
+    /* Adjust these styles as per your design requirements */
+    background-color: #fff;
+    border: 1px solid #fff;
+    width: 90%;
+    margin-bottom: 1rem;
+    height: 60vh;
+    display: flex;
+  }
 
   .imageContainer {
-    width: 100%;
-    height: 50vh;
+    min-width: 60vw;
+    max-width: 60vw;
+    width: 60vw;
+    height:60vh;
   }
-  
+
   .img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    object-fit:cover;
   }
-  
+  .textContainer{
+    padding: 1rem;
+    width: 100%;
+  }
+
   .disc {
     margin-right: 10px;
   }
-  
+}
+
+@media screen and (max-width: 730px) {
+  .img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+  }
+  .cardContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 1rem;
+  }
+
+  .imageContainer {
+    width: 100%;
+    height: 100%;
+  }
+  .textContainer{
+    width: 100%;
+    padding: 0.4rem;
+  }
+
+  .disc {
+    margin-right: 10px;
+  }
+}
