--- a/src/Itinerary/styles/right.module.css
+++ b/src/Itinerary/styles/right.module.css
@@ -47,7 +47,6 @@
 }
 .tour_package_details_bar_list >h5{
   color: #B3A8AB;
-  
 }
 
 .tour_package_details_bar_list > ul > li {
@@ -89,12 +88,29 @@
 .tour_package_bar_price > h3 {
   text-decoration: none;
   color: #F68C1F;
-  padding-left: 10px;
+  display: flex;
+  flex-wrap: nowrap;
+  
 }
 
 
 
 @media only screen and (max-width: 767px) {
+
+  .tour_package_details_bar_price {
+    font-size: 16px;
+    line-height: 25.5px;
+    height: fit-content;
+    list-style-type: disc;
+    padding-top:0.6rem;
+  }
+    
+
+  .tour_package_details_bar_list > ul > li > img {
+    margin-right: 0.3rem;
+    width: 10% !important;
+  }
+
   .tour_right {
     display: flex;
     margin: 1rem;
@@ -116,5 +132,6 @@
     gap:.6rem;
     margin-top: .7rem;
     
-  }
+  } 
+  
 }
