--- a/src/styles/International.css
+++ b/src/styles/International.css
@@ -12,6 +12,7 @@
     margin-bottom: 2rem;
     height: 50vh;
     display: flex;
+    justify-content: center;
   }
 
   .imageContainer {
@@ -34,14 +35,15 @@
   .disc {
     margin-right: 10px;
   }
+  .request{
+    width: 80%;
+  }
+  .phone{
+    width: 17%;
+  }
 }
 
 @media screen and (max-width: 730px) {
-  .img {
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-  }
   .cardContainer {
     display: flex;
     flex-direction: column;
@@ -51,8 +53,15 @@
   }
 
   .imageContainer {
+    min-width: 90%;
+    max-width: 100%;
     width: 100%;
-    height: 100%;
+    height:30%;
+  }
+
+  .img {
+    width: 100vw;
+    object-fit:fill !important;
   }
   .textContainer{
     width: 100%;
@@ -61,5 +70,11 @@
 
   .disc {
     margin-right: 10px;
+  }
+  .request{
+    width: 80%;
+  }
+  .phone{
+    width: 17%;
   }
 }
