--- a/src/index.css
+++ b/src/index.css
@@ -23,17 +23,20 @@ body {
 
 @font-face {
   font-family: "BostonAngelRegular";
-  src: url("../../public/font/Boston\ Angel\ Regular.ttf") format("truetype");
+  src: url("/fonts/BostonAngelRegular.woff2") format("woff2"),
+       url("/fonts/BostonAngelRegular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "MarchClean";
-  src: url("../../public/font/March\ Clean.ttf") format("truetype");
+  src: url("/fonts/MarchClean.woff2") format("woff2"),
+       url("/fonts/MarchClean.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
+
 
 .boston {
   font-family: "BostonAngelRegular", sans-serif;
