--- a/src/styles/International.css
+++ b/src/styles/International.css
@@ -20,12 +20,13 @@
     max-width: 44vw;
     width: 44vw;
     height:50vh;
+    overflow: hidden !important;
   }
 
   .img {
     width: 100vw;
     height: 100vh;
-    object-fit:fill;
+    object-fit:cover;
   }
   .textContainer{
     padding: 1rem;
@@ -36,7 +37,7 @@
     margin-right: 10px;
   }
   .request{
-    width: 80%;
+    width: 70%;
   }
   .phone{
     width: 17%;
@@ -47,21 +48,28 @@
   .cardContainer {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     height: fit-content;
     margin-bottom: 1rem;
   }
 
+  .tour-image {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  
   .imageContainer {
     min-width: 90%;
     max-width: 100%;
     width: 100%;
     height:30%;
+    overflow: hidden;
   }
 
   .img {
     width: 100vw;
-    object-fit:fill !important;
+    object-fit:cover !important;
   }
   .textContainer{
     width: 100%;
@@ -72,7 +80,7 @@
     margin-right: 10px;
   }
   .request{
-    width: 80%;
+    width: 70%;
   }
   .phone{
     width: 17%;
