--- a/src/styles/International.css
+++ b/src/styles/International.css
@@ -13,20 +13,23 @@
     height: 50vh;
     display: flex;
     justify-content: center;
+    border-radius: 20px !important;
+
   }
 
   .imageContainer {
     min-width: 44vw;
     max-width: 44vw;
     width: 44vw;
+    border-radius: 20px !important;
     height:50vh;
-    overflow: hidden !important;
   }
 
   .img {
     width: 100vw;
     height: 100vh;
-    object-fit:cover;
+    object-fit:fill;
+    border-radius: 20px;
   }
   .textContainer{
     padding: 1rem;
@@ -37,7 +40,7 @@
     margin-right: 10px;
   }
   .request{
-    width: 70%;
+    width: 80%;
   }
   .phone{
     width: 17%;
@@ -60,16 +63,16 @@
   }
   
   .imageContainer {
-    min-width: 90%;
+    min-width: 100%;
     max-width: 100%;
     width: 100%;
-    height:30%;
+    height:auto;
     overflow: hidden;
   }
 
   .img {
-    width: 100vw;
-    object-fit:cover !important;
+    width: 100%;
+    object-fit:contain;
   }
   .textContainer{
     width: 100%;
@@ -80,7 +83,7 @@
     margin-right: 10px;
   }
   .request{
-    width: 70%;
+    width: 80%;
   }
   .phone{
     width: 17%;
