--- a/src/styles/International.css
+++ b/src/styles/International.css
@@ -14,7 +14,6 @@
     display: flex;
     justify-content: center;
     border-radius: 20px !important;
-
   }
 
   .imageContainer {
@@ -47,7 +46,7 @@
   }
 }
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 730px) and (min-width:0px) {
   .cardContainer {
     display: flex;
     flex-direction: column;
@@ -57,14 +56,11 @@
   }
 
   .tour-image {
-    max-width: 100%;
     height: auto;
     object-fit: cover;
   }
   
   .imageContainer {
-    min-width: 100%;
-    max-width: 100%;
     width: 100%;
     height:auto;
     overflow: hidden;
