--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -22,7 +22,7 @@
 
 .card-container {
   width: 100%;
-  max-width: 300px; /* Set a maximum width for the card */
+  max-width: 30rem; /* Set a maximum width for the card */
   display: flex;
   flex-direction: column;
   margin: 10px; /* Add some margin for spacing */
