--- a/src/styles/Images.module.css
+++ b/src/styles/Images.module.css
@@ -1,75 +1,32 @@
-@font-face {
-  font-family: 'BostonAngelRegular';
-  src: url('../../public/font/Boston\ Angel\ Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
 
 
-@font-face {
-  font-family: 'MarchClean';
-  src: url('../../font/March Clean.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+img {
+  max-width: 100% !important;
 }
 
-.boston{
-  font-family: 'BostonAngelRegular', sans-serif;
-}
-.march{
-  font-family: 'MarchClean', sans-serif;
-}
-
-.card-container {
-  width: 100%;
-  max-width: 300px; /* Set a maximum width for the card */
-  display: flex;
-  flex-direction: column;
-  margin: 10px; /* Add some margin for spacing */
-}
-
-.image-wrapper {
+.window {
+  height: 100vh;
   position: relative;
-  width: 100%;
-  padding-top: 100%; /* Maintain a square aspect ratio */
 }
 
-.img {
-  position: absolute;
-  top: 0;
-  left: 0;
+.section {
+  position: relative;
+  height: 100vh;
+}
+
+.image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; /* Ensure the image is behind other content */
 }
 
-
-.cut {
-  text-decoration: line-through;
-  font-weight: 100;
-}
-
-@media screen and (min-width:700px) {
-  .save {
-    font-size: 7px;
-    color: white;
-    font-weight: 600;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-  
-  .tag {
-    width: 15px;
-  }
-  
-  
-}
-@media screen and (max-width:700px) {
-  .tag {
-    width: 20px;
-    height: 20px;
-  }
-  .save {
-    font-size: 10px;
-    color: white;
+/* Responsive styles */
+@media only screen and (max-width: 767px) {
+  .section {
+    height: 70vh;
   }
 }
