--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -85,12 +85,20 @@
   left: auto;
 }
 
-
 @media screen and (max-width:700px) {
   .home {
     position: relative; /* Ensure the div can contain absolutely positioned elements */
-    height: 92vh;
+    height: 80vh;
     overflow: hidden; /* Hide overflow to prevent image overflow */
   }
   
+  .home-image {
+    position: absolute;
+    top: 0;
+    right: 0%;
+    width: 120vw; /* Ensure the image covers the entire container */
+    height: 100%; /* Ensure the image covers the entire container */
+    object-fit: cover; /* Maintain aspect ratio and cover the container */
+    z-index: -1 !important; /* Ensure it's behind other content */
+  }
 }
