--- a/src/styles/Infinite.css
+++ b/src/styles/Infinite.css
@@ -1,50 +1,100 @@
-
 .wrapper {
   background-color: black;
-    width: 100% !important;
-    margin-inline: auto;
-    position: relative;
-    min-height: 2rem;
-    padding-top: 0;
-    overflow: hidden;
-    mask-image: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 1) 20%,
-      rgba(0, 0, 0, 1) 80%,
-      rgba(0, 0, 0, 0)
-    );
+  width: 100% !important;
+  margin-inline: auto;
+  position: relative;
+  min-height: 2rem;
+  padding-top: 0;
+  overflow: hidden;
+  mask-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 20%,
+    rgba(0, 0, 0, 1) 80%,
+    rgba(0, 0, 0, 0)
+  );
+}
+
+@keyframes scrollLeft {
+  to {
+    left: -200px;
   }
-  
-  @keyframes scrollLeft {
-    to {
-      left: -200px;
-    }
-  }
-  
+}
+
+.item {
+  border-radius: 6px;
+  position: absolute;
+  left: max(calc(200px * 8), 100%);
+  animation-name: scrollLeft;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+/* Desktop (large screens) */
+@media screen and (min-width: 1200px) {
   .item {
-    border-radius: 6px;
-    position: absolute;
-    left: max(calc(200px * 8), 100%);
-    animation-name: scrollLeft;
-    animation-duration: 16s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+    animation-duration: 16s; /* Slower scroll for large screens */
   }
-  
+
   .item1 {
     animation-delay: calc(30s / 8 * (8 - 1) * -1);
   }
-  
+
   .item2 {
     animation-delay: calc(30s / 8 * (8 - 2) * -1);
   }
-  
+
   .item3 {
     animation-delay: calc(30s / 8 * (8 - 3) * -1);
   }
-  
+
   .item4 {
     animation-delay: calc(30s / 8 * (8 - 4) * -1);
   }
-  
+}
+
+/* Laptop screens */
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .item {
+    animation-duration: 16s; /* Medium speed scroll for laptop screens */
+  }
+
+  .item1 {
+    animation-delay: calc(20s / 8 * (8 - 1) * -1);
+  }
+
+  .item2 {
+    animation-delay: calc(20s / 8 * (8 - 2) * -1);
+  }
+
+  .item3 {
+    animation-delay: calc(20s / 8 * (8 - 3) * -1);
+  }
+
+  .item4 {
+    animation-delay: calc(20s / 8 * (8 - 4) * -1);
+  }
+}
+
+/* Mobile screens */
+@media screen and (max-width: 767px) {
+  .item {
+    animation-duration: 20s; /* Faster scroll for mobile screens */
+  }
+
+  .item1 {
+    animation-delay: calc(20s / 8 * (8 - 1) * -1);
+  }
+
+  .item2 {
+    animation-delay: calc(20s / 8 * (8 - 2) * -1);
+  }
+
+  .item3 {
+    animation-delay: calc(20s / 8 * (8 - 3) * -1);
+  }
+
+  .item4 {
+    animation-delay: calc(20s / 8 * (8 - 4) * -1);
+  }
+}
