--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,13 +1,26 @@
+/* Navbar.css */
+
+.navbar-fixed {
+  transition: background-color 0.3s ease; /* Smooth transition for background color change */
+}
+
+.navbar-fixed.scrolled {
+  background-color: #F68C1F; /* Background color change on scroll */
+}
+
+.nav-logo {
+  display: block;
+}
 
 .navbar-fixed {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Adjust the z-index as needed */
+    z-index: 1000; 
 }
 
 /* CSS for circular layout on mobile */
-@media (max-width: 600px) {
+@media (max-width: 780px) {
     .glider-contain .glider {
       display: flex;
       flex-wrap: wrap;
@@ -31,6 +44,10 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+    .nav-logo {
+      background-color: #F9F9FA; /* Background color */
+      opacity: 1 !important; /* Adjust opacity of the background */
     }
   }
   
