--- a/src/styles/International.css
+++ b/src/styles/International.css
@@ -1,9 +1,6 @@
 
-@media screen and (min-width: 730px) {
-
+@media screen and (min-width: 1101px) {
   .cardContainer {
-    /* Adjust these styles as per your design requirements */
-    /* border: 1px solid; */
     width: 90%;
     margin-bottom: 2rem;
     height: 53vh;
@@ -42,8 +39,60 @@
   }
 }
 
+@media screen and (min-width: 601px) and (max-width: 1100px) {
+  .cardContainer {
+    width: 90%; /* Adjust width for tablet */
+    margin: 1rem auto; /* Center and add margin */
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    border-radius: 20px;
+    height: 200px ;
+  }
 
-@media screen and (max-width: 730px) and (min-width:0px) {
+  .imageContainer {
+    width: 100%; /* Full width image */
+    height: 40vh; /* Set a fixed height */
+    overflow: hidden;
+  }
+
+  .imageContainer img {
+    width: 100%;
+    object-fit: cover; /* Cover the container */
+    border-radius: 20px;
+  }
+
+  .textContainer {
+    padding: 1.5rem;
+    text-align: center; /* Center text */
+  }
+
+  .discount {
+    font-size: 16px; /* Slightly larger font for readability */
+    text-align: center;
+  }
+
+  .request {
+    width: 85%; /* Adjust button width */
+    margin-top: 1rem; /* Add margin to separate from other content */
+  }
+
+  .flex-row {
+    flex-direction: column; /* Stack prices vertically */
+    align-items: center; /* Center the content */
+  }
+
+  .text-base {
+    font-size: 18px; /* Slightly larger text */
+  }
+
+  .line-through {
+    font-size: 14px; /* Smaller strikethrough price */
+  }
+}
+
+
+
+@media screen and (max-width: 600px) and (min-width:0px) {
   .cardContainer {
     display: flex;
     flex-direction: column;
