--- a/src/Itinerary/styles/accordians.css
+++ b/src/Itinerary/styles/accordians.css
@@ -82,11 +82,17 @@
         flex-direction: column;
         gap: 30px;
     }
+    
 
     .accor {
         margin-top: 1rem;
         display: flex;
         flex-direction: column;
+        background-color: rgb(255, 255, 255);
+        overflow: visible;
+        box-shadow: rgba(0, 0, 0, 0.08) -4px -5px 14px 0px,
+            rgba(0, 0, 0, 0.08) 5px 8px 16px 0px;
+        border-radius: 10px;
     }
 
     .accor>details>div>h4 {
