--- a/src/Itinerary/styles/accordians.css
+++ b/src/Itinerary/styles/accordians.css
@@ -27,7 +27,7 @@
     }
     .accor {
         display: flex;
-        background-color: rgb(255, 255, 255);
+        
         overflow: visible;
         box-shadow: rgba(0, 0, 0, 0.08) -4px -5px 14px 0px,
             rgba(0, 0, 0, 0.08) 5px 8px 16px 0px;
@@ -80,19 +80,19 @@
     .accordians {
         display: flex;
         flex-direction: column;
+        justify-content: center;
         gap: 30px;
     }
     
-
+    
     .accor {
         margin-top: 1rem;
         display: flex;
         flex-direction: column;
-        background-color: rgb(255, 255, 255);
-        overflow: visible;
         box-shadow: rgba(0, 0, 0, 0.08) -4px -5px 14px 0px,
             rgba(0, 0, 0, 0.08) 5px 8px 16px 0px;
         border-radius: 10px;
+        
     }
 
     .accor>details>div>h4 {
@@ -104,9 +104,9 @@
         font-weight: 600;
         line-height: 35px;
         text-align: center;
-        color: rgb(33, 37, 41);
+        
         background-color: #F68C1F;
-        margin-right: 15px;
+        
         padding: 0;
         border: none;
         border-radius: 20px;
@@ -129,11 +129,11 @@
 
     p {
         font-size: 15px;
-        margin: 15px;
+       
     }
 
-    .left5>div:nth-child(1)>.btn {
+    /* .left5>div:nth-child(1)>.btn {
         width: 100px !important;
-    }
+    } */
 
 }
