--- a/src/Itinerary/styles/scroll.css
+++ b/src/Itinerary/styles/scroll.css
@@ -1,31 +1,23 @@
-.scroll-to-top-button {
-    position: fixed;
-    bottom: 5px;
-    right: 20px;
-    width: 20px;
-    height: 20px;
-    background-color:#fb923c;
-    color: #fff;
-    border-radius: 200% !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    opacity: 0;
-    transition: opacity .5s ease, transform 1.5s ease; 
-    transform: translateY(-100vh); /* Initial position */
-    display: none;
-  }
-  a{
-    border-radius: 100% !important;
+/* scroll.css */
 
-  }
-  .scroll-to-top-button.show {
-    opacity: 1;
-    transform: translateY(0); /* Final position */
-  }
-  
-  .scroll-to-top-button i {
-    font-size: 20px;
-  }
-  
+.scroll-to-section-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #F68C1F;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.scroll-to-section-button.show {
+  opacity: 1;
+}
+
+.scroll-to-section-button:hover {
+  background-color: #F68C1F;
+}
